# nacelle

./: .env.example  .gitignore  AI_INFERENCE_ROADMAP.md  ARCHITECTURE.md  BUILD.md  CAPSULED_REQUIREMENTS_SUMMARY.md  CAPSULED_ROADMAP.md  CODEBASE_ANALYSIS_REPORT.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_LAUNCH_SHARE_100_POINT_PLAN.md  DOCUMENTATION.md  Dockerfile  Dockerfile.cuda  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PHASE12_PLAN.md  PHASE13_COMPLETION.md  PHASE13_PLAN.md  PROJECT_OVERVIEW.md  README.md  ROADMAP_EXECUTIVE_SUMMARY.md  SECURITY.md  STRUCTURE_DEPENDENCIES.md  TESTING.md  TEST_COVERAGE_REPORT.md  TODO.md  TRADEMARKS.md  UARC_SCOPE_REVIEW.md  build.rs  capsule.toml  config.toml  config.toml.example  coverage-go.out  docker-compose.prod.yml  docker-compose.yml  docker-test.toml  httpbin-test.toml  (+12 more)
.cargo/: audit.toml  config.toml
.githooks/: pre-push
adep-logic/: Cargo.toml
benchmarks/: mlx_performance.py
cli/: Cargo.toml  README.md
cli/src/: engine_client.rs  main.rs
cli/src/commands/: close.rs  dev.rs  doctor.rs  init.rs  internal.rs  keygen.rs  logs.rs  mod.rs  new.rs  open.rs  pack.rs  pack_v2.rs  ps.rs  run.rs  sign.rs  stop.rs
cli/tests/: internal_interface.rs
client/: Caddyfile  Dockerfile  Dockerfile.edge-router  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_FIXES.md  config.yaml  config.yaml.example  docker-compose.yml  entrypoint.sh  go.mod  go.sum  manifest.toml  verify.toml  (+2 more)
engine/: Cargo.toml  Dockerfile  Dockerfile.cuda  PROJECT_OVERVIEW.md  README.md  build.rs  check_errors.txt  check_errors_2.txt  check_errors_3.txt  check_errors_4.txt  check_output.txt  check_output_2.txt  config.toml  config.toml.example  docker-compose.cloud.yml  mock_cloud.py  test_errors.txt  u00261
engine/examples/: verification_cli.rs  verify_audit.rs  verify_grpc.rs
engine/migrations/: 001_init.sql  003_capsule_bundle_path.sql  004_storage_encryption_key.sql  005_audit_logs.sql
engine/provisioning/: INTEGRATION_SUMMARY.md  MIGRATION.md
engine/provisioning/scripts/: cleanup.py  manage_services.py
engine/provisioning/scripts/tests/: test_cleanup.py
engine/provisioning/systemd/: caddy.service
engine/scripts/: check-gpu.sh
engine/src/: api_server.rs  auth.rs  capsule_manager.rs  config.rs  coordinator_service.rs  downloader.rs  grpc_server.rs  http_server.rs  lib.rs  main.rs  process_supervisor.rs  runplan.rs  status_reporter.rs  wasm_host.rs
engine/src/adep/: mod.rs
engine/src/artifact/: cache.rs  manager.rs  mod.rs  tests.rs
engine/src/billing/: apikey.rs  mod.rs  polar.rs  pricing.rs  reporter.rs  subscription.rs  usage.rs
engine/src/cloud/: models.rs  skypilot.rs
engine/src/hardware/: gpu_detector.rs  gpu_process_monitor.rs  hardware_report.rs  mac_gpu.rs  mod.rs  scrubber.rs
engine/src/headscale/: client.rs  mod.rs
engine/src/logs/: collector.rs  mod.rs
engine/src/metrics/: mod.rs  prometheus_metrics.rs
engine/src/network/: mdns.rs  service_registry.rs  tailscale.rs  traefik.rs
engine/src/oci/: cache.rs  image.rs  layer.rs  mod.rs  registry.rs  spec_builder.rs
engine/src/proto/: mod.rs  onescluster.agent.v1.rs  onescluster.common.v1.rs  onescluster.coordinator.v1.rs  onescluster.engine.v1.rs
engine/src/runtime/: container.rs  dev.rs  direct.rs  docker_cli.rs  mod.rs  native.rs
engine/src/security/: audit.rs  dns_monitor.rs  egress_policy.rs  egress_proxy.rs  mod.rs  path.rs  signing.rs  verifier.rs  vram_scrubber.rs
engine/src/storage/: error.rs  luks.rs  lvm.rs  manager.rs  mod.rs
engine/src/workload/: manifest_loader.rs  tests.rs
engine/test-data/: adep_logic.wasm  capsule_v1_hello_docker.toml  manifest.json
engine/test-data/bundle/: index.html
engine/tests/: audit_cas_e2e.rs  benchmarks.rs  container_e2e.rs  network_security_e2e.rs  runplan_grpc_e2e.rs  security_e2e.rs  security_verification.rs  storage_integration.rs  storage_manager_e2e.rs  vault_minimal_e2e.rs
libadep/cas/: Cargo.toml
libadep/cas/src/: index.rs  lib.rs  safety.rs  storage.rs  verify.rs
libadep/cas/tests/: safety_selftest.rs
libadep/cli/: Cargo.toml  README.md
libadep/cli/ci/: pip_smoke.sh  pnpm_smoke.sh
libadep/cli/proto/depsd/v1/: depsd.proto
libadep/cli/src/: error.rs  main.rs  manifest.rs  package.rs  signing.rs
libadep/cli/src/commands/: build.rs  capsule.rs  compose.rs  deps.rs  dev_pin.rs  doctor.rs  init.rs  keygen.rs  manifest.rs  mod.rs  pack.rs  run.rs  sign.rs  verify.rs
libadep/cli/src/observability/: mod.rs
libadep/cli/src/runtime/: audit.rs  bootstrap.py  container.rs  engine.rs  mod.rs  registry.rs
libadep/cli/tests/: depsd_smoke.rs  integration_test.rs
libadep/cli/tests/fixtures/manifests/invalid/: manifest_invalid_compressed.json  manifest_invalid_python_no_deps.json  manifest_localhost_without_dev.json  manifest_missing_trust.json
libadep/cli/tests/fixtures/manifests/v1_0/: manifest.min.json
libadep/cli/tests/fixtures/manifests/v1_2/: compressed.raw  manifest.min.json
libadep/cli/tools/: README.md
libadep/cli/tools/validator-cli/: validate.js
libadep/core/: Cargo.toml
libadep/core/examples/: capsule.toml
libadep/core/src/: capsule_manifest.rs  capsule_v1.rs  deps.rs  draft.rs  error.rs  lib.rs  manifest.rs  mapper.rs  package.rs  packager.rs  resolver.rs  runplan.rs  signing.rs
libadep/core/tests/: capsule_manifest_hcl.rs  capsule_manifest_toml.rs  manifest_apply_defaults.rs  runplan_cross.rs  runplan_storage_mounts.rs
libadep/core/tests/fixtures/manifests/: .placeholder
libadep/core/tests/fixtures/manifests/invalid/: manifest_invalid_dep_capsule.json
libadep/core/tests/fixtures/manifests/v1_1/: manifest.min.json
libadep/core/tests/fixtures/manifests/v1_2/: manifest.full.json
libadep/libadep/: Cargo.toml
libadep/libadep/src/: lib.rs
libadep/observability/: Cargo.toml
libadep/observability/src/: lib.rs
libadep/plugins/logic/: Cargo.toml
libadep/plugins/logic/src/: lib.rs
libadep/runtime/: Cargo.toml
libadep/runtime/src/: error.rs  lib.rs  manifest.rs
libadep/runtime/src/runtimes/: mod.rs  simple_process.rs  youki.rs
(+489 files in other folders)
