[package]
name = "nacelle"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
description = "The Source Runtime for Capsules"
repository = "https://github.com/nacelle-dev/nacelle"
authors = ["Koh0920"]
readme = "README.md"
keywords = ["runtime", "container", "wasm", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "nacelle"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.8"
axum = "0.7"

# 既存の依存関係
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.16"
which = "5.0"
chrono = { version = "0.4", features = ["serde"] }

dirs = "5.0"
serde_yaml = "0.9"



# Storage management
uuid = { version = "1.10", features = ["v4"] }


# Cryptography & Audit
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
rand = "0.8"
hex = "0.4"
hmac = "0.12"
base64 = "0.22"


# Type definitions and utilities
dashmap = "6"
capnp = "0.24"
tokio-stream = { version = "0.1.17", features = ["sync", "net"] }
hcl-rs = "0.17"
async-stream = "0.3.6"
futures = "0.3.31"
sha2 = "0.10.9"

bytes = "1.11.0"
# Cross-compiling for Linux guest (musl) should not depend on host OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

zip = "2.1"
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
async-trait = "0.1.89"
fs2 = "0.4.3"

# JIT Provisioning (Phase 1): Progress bar for downloads
indicatif = "0.17"
# Socket Activation (Phase 2): FD inheritance for child processes
nix = { version = "0.30.1", features = ["signal", "fs", "socket", "net"] }
libc = "0.2"
subtle = "2.6.1"
rust_decimal = { version = "1.39.0", features = ["serde"] }
rust_decimal_macros = "1.39.0"
shell-words = "1.1.1"


# L1 Policy pattern matching
regex = "1.10"
ctrlc = "3.4"
ignore = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
# Phase 3: Sandbox (Linux Landlock LSM)
landlock = "0.4"
aya = "0.13"

[features]
default = ["engine"]
# Engine mode: Source-only runtime
engine = []
# Library mode: Core types and verification only (for CLI/embedded use)
library = []
phase2 = []
# Embedded mode: minimal dependencies for capsule-cli integration
embedded = []
# Optional CUDA support for VRAM checks
cuda = []

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
aya-build = "0.1"

# Workspace configuration
[workspace]
members = ["ebpf"]
resolver = "2"

# v0.2.0 Optimization: Tauri-inspired build profiles
[profile.release]
opt-level = "s"      # Size optimization
lto = true            # Link-time optimization
strip = true          # Strip debug symbols
panic = "abort"       # Smaller binary size
codegen-units = 1     # Better optimization

[profile.release.package.nacelle-ebpf]
opt-level = "z"


