[package]
name = "nacelle"
version = "0.2.3"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
description = "The Source Runtime for Capsules"
repository = "https://github.com/nacelle-dev/nacelle"
authors = ["Koh0920"]
readme = "README.md"
keywords = ["runtime", "container", "wasm", "orchestration"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "nacelle"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

# Shared libraries
# capsule-sync = { path = "../capsule-sync" }  # TODO: Migrated to sync-rs

# 既存の依存関係
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
url = "2.5"

clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
which = "5.0"

dirs = "5.0"



# Cryptography & Audit
hex = "0.4"
blake3 = "1.5"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = true }
bs58 = "0.5"
unsigned-varint = "0.8"


# Type definitions and utilities
futures = "0.3.31"
sha2 = "0.10.9"
# Cross-compiling for Linux guest (musl) should not depend on host OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

zip = "2.1"
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
async-trait = "0.1.89"
fs2 = "0.4.3"

# JIT Provisioning (Phase 1): Progress bar for downloads
indicatif = "0.17"
# Wasm Runtime for sync.wasm execution
wasmtime = "16.0"
wasmtime-wasi = "16.0"
wasi-common = "16.0"
tempfile = "3.8"
# Socket Activation (Phase 2): FD inheritance for child processes
nix = { version = "0.30.1", features = ["signal", "fs", "socket", "net"] }
libc = "0.2"
shell-words = "1.1.1"



[target.'cfg(target_os = "linux")'.dependencies]
# Phase 3: Sandbox (Linux Landlock LSM)
landlock = "0.4"
aya = "0.13"

[features]
default = ["engine"]
# Engine mode: Source-only runtime
engine = []
# Library mode: Core types and verification only (for CLI/embedded use)
library = []
phase2 = []
# Embedded mode: minimal dependencies for ato-cli integration
embedded = []
# Optional CUDA support for VRAM checks
cuda = []
legacy-manifest-tests = []
# Sync runtime support (requires capsule-sync crate)
sync-runtime = []

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
aya-build = "0.1"

# v0.2.0 Optimization: Tauri-inspired build profiles
[profile.release]
opt-level = "s"      # Size optimization
lto = true            # Link-time optimization
strip = true          # Strip debug symbols
panic = "abort"       # Smaller binary size
codegen-units = 1     # Better optimization

[profile.release.package.nacelle-ebpf]
opt-level = "z"
