[package]
name = "uarc-cli"
version = "0.1.0"
edition = "2021"
description = "UARC Command Line Interface"
license = "Apache-2.0"

[[bin]]
name = "uarc"
path = "src/main.rs"

[dependencies]
# Core library - use library feature only (no engine dependencies)
capsuled = { path = "..", default-features = false, features = ["library"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
