[package]
name = "nacelle-cli"
version = "0.2.0"
edition = "2021"
description = "Nacelle CLI - Unified Runtime for Capsules"
license = "Apache-2.0"
authors = ["Nacelle Contributors"]
readme = "../README.md"
keywords = ["runtime", "container", "wasm", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nacelle"
path = "src/main.rs"

[dependencies]
# Core library - use library feature only (no engine dependencies)
nacelle = { path = "..", default-features = false, features = ["library"] }

# CLI framework
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# gRPC client (must match capsuled's tonic version)
tonic = "0.12"
prost = "0.13"

# Cryptography (Ed25519)
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"

# Cap'n Proto (for canonical bytes)
capnp = "0.18"

# Hex encoding
hex = "0.4"

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
dirs = "5.0"
ignore = "0.4"  # .gitignore support
walkdir = "2.4"
which = "6.0"

# Command parsing (handles quotes properly)
shell-words = "1.1.1"

# Archive support
tar = "0.4"
flate2 = "1.0"  # gzip compression
zstd = "0.13"   # v2.0 compression

# Socket Activation (Phase 2)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
