[package]
name = "capsuled-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "capsuled_engine"
path = "src/lib.rs"

[[bin]]
name = "capsuled-engine"
path = "src/main.rs"

[[bin]]
name = "status-reporter-driver"
path = "src/bin/status_reporter_driver.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
wasmtime = "16.0"
toml = "0.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# 既存の依存関係
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.16"
which = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Hardware detection
hostname = "0.4"
dirs = "5.0"
mdns-sd = "0.10"
serde_yaml = "0.9"


# OCI runtime specification
oci-spec = "0.6"

# Storage management
uuid = { version = "1.10", features = ["v4"] }

# Log monitoring
notify = "6"

# Cryptography & Audit
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
rand = "0.8"
hex = "0.4"

# Metrics
prometheus = "0.13"

# Storage and container management (optional, for future implementation)
# libadep-core = { path = "../../libadep/core" }
libadep-core = { path = "../../libadep/core", features = ["toml-support"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
hcl-rs = "0.19.4"
async-stream = "0.3.6"
futures = "0.3.31"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"

bytes = "1.11.0"
reqwest = { version = "0.12", features = ["json", "stream"] }

zip = "2.1"
tar = "0.4"
flate2 = "1.0"
async-trait = "0.1.89"
nix = { version = "0.30.1", features = ["signal"] }
# lvm-sys2 = "0.2"
# libcryptsetup-rs = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.9"
cudarc = { version = "0.17", features = ["driver", "cuda-version-from-build-system"] }

[features]
default = ["toml-support"]
toml-support = ["libadep-core/toml-support"]

[dev-dependencies]
tempfile = "3.8"
colored = "2.1"
sysinfo = "0.30"

[build-dependencies]
tonic-build = "0.10"

