[package]
name = "libadep-cas"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
walkdir = "2.5"
zstd = "0.13"
tempfile = "3"

[dev-dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate"] }
