[package]
name = "adep-cli"
version = "0.1.1"
edition = "2021"
license = "FSL-1.1-ALv2"

[[bin]]
name = "adep"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ctrlc = "3.4"
dirs = "5.0"
ed25519-dalek = { version = "1.0", features = ["rand", "std"] }
hex = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tiny_http = "0.12"
tokio = { version = "1", features = ["full"] }
url = "2.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
hmac = "0.12"
libadep = { path = "../libadep" }
libadep-cas = { path = "../cas" }
libadep-deps = { path = "../deps" }
libadep-core = { path = "../core" }
libadep-observability = { path = "../observability" }
tempfile = "3"
zstd = "0.13"
flate2 = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
prost = "0.12"
tonic = { version = "0.11", default-features = false }

[dev-dependencies]
tar = "0.4"
