[package]
name = "libadep-observability"
version = "0.1.0"
edition = "2021"
license = "FSL-1.1-ALv2"

[features]
default = ["std"]
std = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
