[package]
name = "adep-logic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
# libadep-core は後で追加
# libadep-core = { path = "../../core" }
wit-bindgen = "0.16"

[profile.release]
opt-level = "z"
lto = true
